--- a/app.wxss
+++ b/app.wxss
@@ -32,3 +32,12 @@ text-align: center;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-size: 30rpx;
 }
+.flex{
+  display: flex;
+  padding: 0;
+  margin: 0;
+}
+.icon{
+  width: 30px;
+  height: 30px;
+}
