--- a/pages/club/club.wxml
+++ b/pages/club/club.wxml
@@ -2,8 +2,8 @@
 
   <!--弹出窗口下方阴影-->
   <view class='mask' wx:if="{{showmask}}"></view>
-  
-  
+
+
   <!--弹出窗口界面-->
   <view class='apply_info' wx:if="{{showmask}}">
     <view>请输入您的学号、姓名和联系方式</view>
@@ -21,7 +21,7 @@
     </view>
     <view class='button_area'>
       <view bindtap='apply_send'>确定</view>
-      <view bindtap='apply_cancel'>取消</view>
+      <view bindtap='submit_cancel'>取消</view>
     </view>
   </view>
 
@@ -39,8 +39,8 @@
       <swiper-item>
         <scroll-view>
           <view class='info'>
-            <image src='{{logo}}' class='logo'></image>
-            <text>{{info}}</text>
+            <image src='{{club.logo}}' class='logo'></image>
+            <text>{{club.info}}</text>
           </view>
         </scroll-view>
       </swiper-item>
@@ -48,14 +48,15 @@
       <swiper-item>
         <scroll-view scroll-y>
 
-          <view class='act_container' wx:for="{{activity_list}}">
+          <view class='act_container' wx:for="{{activity_list}}" wx:key='act_id'>
             <view class='activity'>
               <!--<image class='act_image' src='{{item.image}}'></image>-->
               <view class='act_title'>{{item.act_name}}</view>
               <view class='act_time'>
                 <image src='/image/time.png' class='icon'></image>
-                <view>{{item.start_time}}</view> 至
-                <view>{{item.end_time}}</view>
+                <view>{{item.start_date}} {{item.start_time}}</view>
+                <view>　至　</view>
+                <view>{{item.end_date}} {{item.end_time}}</view>
               </view>
               <view class='act_place'>
                 <image class='icon' src='/image/place.png'></image>
@@ -68,7 +69,7 @@
             </view>
             <view class='apply'>
               <!--<picker mode ='date' bindchange='bindchange_date' value='{{date}}'>{{date}}</picker>-->
-              <view class='app_but' bindtap='bindtap_submit' id='{{index}}'>{{apply_act}}</view>
+              <view class='app_but' bindtap="{{item.isjoin ? 'apply_canel':'bindtap_submit'  }}" id='{{index}}'>{{item.isjoin ? '取消参加' : '申请参加'}}</view>
             </view>
           </view>
         </scroll-view>
@@ -76,47 +77,75 @@
       <!--第3页-->
       <swiper-item>
         <scroll-view scroll-y>
-          <view class='app_input'>
-            <label>学号：</label>
-            <input bindinput='input_id' value="{{club_user_info.stu_id}}" disabled='{{idi}}'></input>
+
+          <view class='flex honor'>
+            <view class='honor-item'>
+              <image class='honor-img' src="/image/vip{{club_isjoin? '1' : ''}}.png"></image>
+              <view class='honor-font'>社团VIP</view>
+            </view>
+            <view class='honor-item'>
+              <image class='honor-img' src="/image/honor{{(club_isjoin)&&(join_count>2)? '1' : ''}}.png"></image>
+              <view class='honor-font'>活动老司机</view>
+            </view>
+            <view class='honor-item'>
+              <image class='honor-img' src="/image/young{{club_isjoin? '1' : ''}}.png"></image>
+              <view class='honor-font'>社团小鲜肉</view>
+            </view>
+            <view class='honor-item'>
+              <image class='honor-img' src="/image/old{{club_isjoin? '1' : ''}}.png"></image>
+              <view class='honor-font'>社团元老</view>
+            </view>
           </view>
+          <view wx:if="{{!club_isjoin & !dis_info}}" style='font-size:25rpx'>您还不是该协会会员，未能点亮勋章，点下方按钮加入!</view>
+
+          <!--动画面板-->
           <view class='app_input'>
-            <label>姓名：</label>
+            <label class='user_info_label'>姓名</label>
             <input bindinput='input_name' value='{{club_user_info.name}}' type='{{show}}'></input>
           </view>
-          <view class='app_input'>
-            <label>电话：</label>
-            <input bindinput='input_phone' value='{{club_user_info.phone}}' type='{{show}}'></input>
+          <image class='icon' style='padding:10rpx 355rpx' src='/image/jiantou.png' bindtap='display_user_info' animation="{{icon_animationdata}}"></image>
+
+          <view animation="{{animationdata}}"  class="animation">
+            <view class='app_input'>
+              <label class='user_info_label'>学号</label>
+              <input bindinput='input_id' value="{{club_user_info.stu_id}}" disabled='{{idi}}'></input>
+            </view>
+
+            <view class='app_input'>
+              <label class='user_info_label'>电话</label>
+              <input bindinput='input_phone' value='{{club_user_info.phone}}' type='{{show}}'></input>
+            </view>
+
+            <view class='join' wx:if="{{club_isjoin | dis_info |!have_all_info}}">
+              <view class='app_input'>
+                <label class='user_info_label'>性别</label>
+                <input bindinput='input_gender' value='{{club_user_info.gender}}' type='{{show}}'></input>
+              </view>
+              <view class='app_input'>
+                <label class='user_info_label'>籍贯</label>
+                <input bindinput='input_home' value='{{club_user_info.home}}' type='{{show}}'></input>
+              </view>
+              <view class='app_input'>
+                <label class='user_info_label'>院系</label>
+                <input bindinput='input_school' value='{{club_user_info.school}}' type='{{show}}'></input>
+              </view>
+              <view class='app_input'>
+                <label class='user_info_label'>班级</label>
+                <input bindinput='input_class' value='{{club_user_info.class}}' type='{{show}}'></input>
+              </view>
+              <view class='app_input'>
+                <label class='user_info_label'>民族</label>
+                <input bindinput='input_nation' value='{{club_user_info.nation}}' type='{{show}}'></input>
+              </view>
+              <view class='app_input'>
+                <label class='user_info_label'>出生年月</label>
+                <picker mode="date" bindchange='bindchange_birth' style='color:green'>{{club_user_info.birth}}</picker>
+              </view>
+              <button bindtap='update' class='button' wx:if="{{have_info}}">更新资料</button>
+            </view>
+            <button bindtap='apply_join_club' wx:if="{{!club_isjoin}}" class='button'>申请加入</button>
+
           </view>
-          <view wx:if="{{!ismember}}" style='font-size:25rpx'>您还不是该协会会员，或未绑定微信账号</view>
-          <view class='join' wx:if="{{ismember}}">
-            <view class='app_input'>
-              <label>性别：</label>
-              <input bindinput='input_gender' value='{{club_user_info.gender}}' type='{{show}}'></input>
-            </view>
-            <view class='app_input'>
-              <label>籍贯：</label>
-              <input bindinput='input_home' value='{{club_user_info.home}}' type='{{show}}'></input>
-            </view>
-            <view class='app_input'>
-              <label>院系：</label>
-              <input bindinput='input_school' value='{{club_user_info.school}}' type='{{show}}'></input>
-            </view>
-            <view class='app_input'>
-              <label>班级：</label>
-              <input bindinput='input_class' value='{{club_user_info.class}}' type='{{show}}'></input>
-            </view>
-            <view class='app_input'>
-              <label>民族：</label>
-              <input bindinput='input_nation' value='{{club_user_info.nation}}' type='{{show}}'></input>
-            </view>
-            <view class='app_input'>
-              <label>出生年月：</label>
-              <picker mode="date" bindchange='bindchange_birth' style='color:green'>{{club_user_info.birth}}</picker>
-            </view>
-            <button bindtap='sign'>{{apply}}</button>
-          </view>
-          <button bindtap='getinfo' wx:if="{{!ismember}}">申请加入</button>
         </scroll-view>
       </swiper-item>
     </swiper>
