--- a/pages/my_club/my_club.wxss
+++ b/pages/my_club/my_club.wxss
@@ -1,6 +1,41 @@
 /* pages/my_club/my_club.wxss */
+/*切换面班css*/
+.swiper-tab {  
+  display: flex;  
+  flex-direction: row;  
+  padding-top: 5rpx;
+  justify-content: space-around;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  border-top: solid 1rpx #dbdbdb;
+  z-index: 100;
+  background: white;
+  align-items: center;
+}  
+  
+.tab-item {  
+  width: 30%;  
+  margin:0; 
+  text-align: center;  
+  color: #777;  
+  font-size: 30rpx;
+}  
+  
+
+  
+.on {  
+  color: #1296db;  
+  
+}  
+
+scroll-view{
+  height: 1100rpx;
+}
+
+
 input{
-  width: 60%;
+  width: 65%;
   margin: 10rpx;
   height: 60rpx;
   border-bottom:  solid 1rpx #dbdbdb;
@@ -16,10 +51,10 @@ input{
   margin: 20rpx 10%;
   width: 80%;
   justify-content: flex-start;
+  flex-shrink: 1;
 }
 picker{
   color: green;
-  
   border-bottom: solid 1rpx #dbdbdb;
   margin: 10rpx 20rpx;
 }
@@ -30,8 +65,11 @@ picker{
 }
 .title2{
   margin: 20rpx;
-  margin-left: 60rpx;
+  margin-left: 50rpx;
   font-size: 30rpx;
+  display: flex;
+  flex-shrink: 1;
+  width: 150rpx;
 }
 .act{
   display: flex;
@@ -73,6 +111,8 @@ picker{
   display: flex;
   justify-content: space-around;
   align-items: center;
+  width: 100%;
+  flex-shrink: 1;
 }
 .submit_button{
   width: 140rpx;
@@ -87,12 +127,61 @@ picker{
   margin: 20rpx;
 }
 textarea{
-  border: solid #1296db 1rpx;
+  box-shadow: 0 0 1rpx 1rpx #dbdbdb;
   margin: 20rpx;
   padding: 10rpx;
   border-radius: 10rpx;
   width: 690rpx;
+  font-size: 25rpx;
+  height: 120px;
+  flex-shrink: 1;
+  z-index: 1;
 }
 .label_input{
   display: flex;
+  flex-shrink: 1;
+}
+.logo-area{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.logo{
+  width: 120rpx;
+  height:120rpx;
+  margin:20rpx 300rpx;
+}
+.logo-button{
+  width: 140rpx;
+  height: 60rpx;
+  font-size: 25rpx;
+  padding: 0;
+}
+.remind{
+  font-size: 25rpx;
+  padding: 20rpx;
+}
+.mask{
+  z-index: 100;
+  background: gray;
+  opacity: 0.5;
+  width: 100%;
+  height: 1200rpx;
+  position: fixed;
+}
+.add_act{
+  padding: 15rpx;
+  width: 550rpx;
+  border-radius: 10rpx;
+  position: fixed;
+  margin-top: 20rpx;
+  margin-left: 85rpx;
+  background: white;
+  z-index: 101;
+  display: flex;
+  flex-wrap: wrap;
+}
+.w{
+  margin-left: 20rpx;
 }
